--- a/ikeyboy-designs.html
+++ b/ikeyboy-designs.html
@@ -20,7 +20,7 @@
       <a class="main-nav__link" href="#">Contact</a>
     </nav>
     <div class="banner-image"> 
-      <img class="banner" src="./img/ikeyboyDesign-banner.jpg">
+      <img class="banner" src="./img/Ikeyboy Designs.png">
     </div>
     <div>
     <div class="home">
@@ -43,7 +43,7 @@
           </p>
           <span class="info__spacer"></span>
           <br><br>
-          <a href="ikeyboy-styles.html" class="info__cta">IkeyBoy Styles</a>
+          <a href="Ikeyboy-styles.html" class="info__cta">IkeyBoy Styles</a>
         </div>
         </header>
     </section>
