changing links and woring

--- a/ikeyboy-designs.html
+++ b/ikeyboy-designs.html
@@ -35,7 +35,7 @@
             IkeyBoy Designs - [Mood by Design.]
 
         <br>
-        Here you will find my personal and origial design concepts either powered by strong human emotional feeling and moods that highligh aspects of life and questions about life through my eyes.
+        Here you will find my personal and origial design concepts either powered by strong human emotional feeling and moods that highlight aspects of life and questions about life through my eyes.
 
         Designs include Logos, Mood Playlists and Art work. 
 
