--- a/ikeyboy-designs.html
+++ b/ikeyboy-designs.html
@@ -20,7 +20,7 @@
       <a class="main-nav__link" href="#">Contact</a>
     </nav>
     <div class="banner-image"> 
-      <img class="banner" src="./img/Ikeyboy-styles.jpg">
+      <img class="banner" src="./img/IkeyboyDesign-banner.jpg">
     </div>
     <div>
     <div class="home">
