adding an additional image to grid

--- a/ikeyboy-designs.html
+++ b/ikeyboy-designs.html
@@ -68,6 +68,8 @@
           <div class="grid-item item-6" ><img src="./img/Image skild 1.png" style="width:100%" alt=""></div>
 
           <div class="grid-item item-7" ><img src="./img/Overdose:more - ADDITCTED PROJECT.jpg" style="width:100%" alt=""></div>
+
+          <div class="grid-item item-8" ><img src="./img/Worded Face.jpg" style="width:100%" alt=""></div>
           <!-- End style work-->
          </div>
     </div>
@@ -86,6 +88,7 @@
             <div class="grid-item item-c" ><img src="./img/Pluggy insta IBM.jpg" style="width:100%" alt=""></div>
   
             <div class="grid-item item-d" ><img src="./img/Yamo logo designs 1.jpg" style="width:100%" alt=""></div>
+            
          <!-- End style work-->
         </div>
    </div>
