--- a/Ikeyboy-styles.html
+++ b/Ikeyboy-styles.html
@@ -14,9 +14,9 @@
   <body>
     <button id="hamburger" class="hamburger" onclick="handleNav"></button>
     <nav id="main-nav" class="main-nav">
-      <a class="main-nav__link" href="indext.html">Home</a>
+      <a class="main-nav__link" href="index.html">Home</a>
       <a class="main-nav__link" href="ikeyboy-designs.html">IkeyBoy Design</a>
-      <a class="main-nav__link" href="ikeyboy-styles.html">IkeyBoy Styles</a>
+      <a class="main-nav__link" href="Ikeyboy-styles.html">IkeyBoy Styles</a>
       <a class="main-nav__link" href="#">Contact</a>
     </nav>
     <div class="banner-image"> 
@@ -44,7 +44,11 @@
               <span class="info__spacer"></span>
               <br><br>
               <a href="ikeyboy-designs.html" class="info__cta">IkeyBoy Designs</a>
+
+              <a href="index.html" class="info__cta">Home</a>
             </header>
+            </div>
+            
         </section>
       <div class="grid-section">
         
