style page link fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             
             <div class="column-logo2">
-              <a href="ikeyboy-styles.html"><img class="logos" src="./img/IkeyBoy Styles.png" alt="Ikeyboy-styles" style="width: 100%"></a>
+              <a href="Ikeyboy-styles.html"><img class="logos" src="./img/IkeyBoy Styles.png" alt="Ikeyboy-styles" style="width: 100%"></a>
             </div> 
           </div>
 
