changind selected elements

--- a/Ikeyboy-styles.html
+++ b/Ikeyboy-styles.html
@@ -55,9 +55,9 @@
         <!--Style work-->
         <div class="Style-types">
 
-          <div class="grid-item item-1" ><img src="/img/Pluggy insta IBM.jpg" style="width:100%" alt=""></div>
+          <div class="grid-item item-1" ><img src="/img/Fox mark design post.jpg" style="width:100%" alt=""></div>
 
-          <div class="grid-item item-2" ><img src="./img/img-6743.jpeg" style="width:100%" alt=""></div>
+          <div class="grid-item item-2" ><img src="./img/Ikeyboy Style sock.jpg" style="width:100%" alt=""></div>
 
           <div class="grid-item item-3" ><img src="./img/Tink Mood.JPG" style="width:100%" alt=""></div>
 
