--- a/Ikeyboy-styles.html
+++ b/Ikeyboy-styles.html
@@ -61,7 +61,7 @@
 
           <div class="grid-item item-3" ><img src="./img/Tink Mood.JPG" style="width:100%" alt=""></div>
 
-          <div class="grid-item item-4" ><img src="./img/Worded Face.jpg" style="width:100%" alt=""></div>
+          <div class="grid-item item-4" ><img src="./img/Pluggy insta IBM.jpg" style="width:100%" alt=""></div>
           <!-- End style work-->
         </div>
    </div>
