--- a/Ikeyboy-styles.html
+++ b/Ikeyboy-styles.html
@@ -55,11 +55,11 @@
         <!--Style work-->
         <div class="Style-types">
 
-          <div class="grid-item item-1" ><img src="/img/Fox mark design post.jpg" style="width:100%" alt=""></div>
+          <div class="grid-item item-1" ><img src="/img/Tink Mood.JPG" style="width:100%" alt=""></div>
 
           <div class="grid-item item-2" ><img src="./img/Ikeyboy Style sock.jpg" style="width:100%" alt=""></div>
 
-          <div class="grid-item item-3" ><img src="./img/Tink Mood.JPG" style="width:100%" alt=""></div>
+          <div class="grid-item item-3" ><img src="./img/Fox mark design post.jpg" style="width:100%" alt=""></div>
 
           <div class="grid-item item-4" ><img src="./img/Pluggy insta IBM.jpg" style="width:100%" alt=""></div>
           <!-- End style work-->
