--- a/Ikeyboy-styles.html
+++ b/Ikeyboy-styles.html
@@ -45,7 +45,7 @@
               </p>
               <span class="info__spacer"></span>
               <br><br>
-              <a href="ikeyboy-designs.html" class="info__cta">IkeyBoy Designs</a>
+              <a href="ikeyboy-designs.html" class="info__cta-1">IkeyBoy Designs</a>
 
               <a href="index.html" class="info__cta">Home</a>
             </header>
