media query adjustment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                       <!-- 1st column-->
 
-            <div class="column-l">
+            <div class="l">
             <div class="column-logo1">
               <a href="ikeyboy-designs.html">
               <img class="logos" src="./img/Ikeyboy Designs.png" alt="Ikeyboy-design" style="width: 100%"> </a>
@@ -51,7 +51,7 @@
  
 
         <!-- 2nd column-->
-            <div class="column-p">
+            <div class="p">
               <div class="text-col-move">
                 <h1 class="info__title">Portfolio</h1>
               <span class="info__spacer"></span>
