--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="main-nav" class="main-nav">
       <a class="main-nav__link" href="indext.html">Home</a>
       <a class="main-nav__link" href="ikeyboy-designs.html">IkeyBoy Design</a>
-      <a class="main-nav__link" href="ikeyboy-styles.html">IkeyBoy Styles</a>
+      <a class="main-nav__link" href="Ikeyboy-styles.html">IkeyBoy Styles</a>
       <a class="main-nav__link" href="#">Contact</a>
     </nav>
     <div class="banner-image"> 
