--- a/ikeyboy-designs.html
+++ b/ikeyboy-designs.html
@@ -33,12 +33,12 @@
             Welcome to my portfolio. 
             <br>
             <br>
-            IkeyBoy Designs - [Mood by Design.]
+            IkeyBoy Designs - [MOOD BY DESIGN]
 
         <br>
-        Here you will find my personal and origial design concepts either powered by strong human emotional feeling and moods that highlight aspects of life and questions about life through my eyes.
+        Here you will find personal and original design concepts either powered by strong human emotional feeling and moods that highlight life through my eyes.
 
-        Designs include Logos, Mood Playlists and Art work. 
+        Designs include LOGOS, Mood PLAYLISTS and Art work. 
 
         
           </p>
