--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                           Welcome to my portfolio. 
                           <br>
                           <br>
-                         <span id="wrapper"> My name Ike Mgbenwelu and for my work I wanted to showcase by ability to not only design inpired artwork but also a webpage built using HTML, CSS and Javascript.
+                         <span id="wrapper"> My name Ike Mgbenwelu. On this site I will be showcasing my ability to not only design inpired and orignial art pecies but also a webpage built using HTML, CSS and Javascript.
           
                           <br>
                           <br>
-                        <strong><i> Daily updates being added to this site.</i></strong>
+                        <strong><i> Regular updates being added to this site.</i></strong>
                          </span> </p></div>
                         </div>
 
