--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                           
                           I realised my passion for identifying user needs to create designs and content that speaks true to human emotion and connecting with individuals.  
                            <br>
-                           I also a webpage built using HTML, CSS and Javascript.
+                           I built this webpage using HTML, CSS and Javascript.
                           <br>
                           <br>
                   
